deploy-stage-server/kubernetes/priv-dev-docs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: priv-dev-mkdocs-deployment
  namespace: privacera-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: priv-dev-mkdocs
  template:
    metadata:
      labels:
        app: priv-dev-mkdocs
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: nginx-conf
          configMap:
            name: priv-dev-mkdocs-config
            items:
              - key: nginx-config.conf
                path: default.conf  # This ensures the configuration file is loaded by NGINX by default
