deploy-stage-server/kubernetes/priv-dev-docs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: priv-dev-mkdocs-service
  namespace: privacera-services
spec:
  selector:
    app: priv-dev-mkdocs
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
