deploy-stage-server/kubernetes/priv-dev-docs-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: priv-dev-mkdocs-ingress
  namespace: privacera-services
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:587946681758:certificate/6ba7bf5e-43fa-4258-862b-63bb724cdb0b
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: global-ingress-group
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  ingressClassName: alb
  rules:
    - host: "priv-dev-mkdocs.privacera.me"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: priv-dev-mkdocs-service
                port:
                  number: 80
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: ssl-redirect
                port:
                  name: use-annotation
